--- a/components/VideoIntro.module.css
+++ b/components/VideoIntro.module.css
@@ -1,6 +1,6 @@
 .heroContainer {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   min-height: 750px;
   overflow: hidden;
@@ -23,7 +23,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   filter: blur(75px) saturate(1.8) opacity(0.38);
